# Novel-Forge

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
apps/api/: pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 14a093ee0542_add_project_fields.py  1ca20d97d89c_add_volume_outlines_table.py  281d66300adb_add_bible_tables.py  3430fd95bb99_add_bible_candidates_table.py  5445857ffffd_add_state_change_candidates_table.py  7652246f746e_add_story_genes_table.py  7c900708c6a3_add_novel_synopses_table.py  7e879605f5e8_add_analysis_tasks_tables.py  8914be71377d_add_chapter_parse_source.py  8c4450189cdb_add_chapter_plans_table.py  9e4516180a65_add_draft_versions_table.py  a6c232137e28_add_creative_tables.py  abd8b84545a2_add_chapter_analyses_table.py  b8d48886e250_add_chapter_rhythm_plans_table.py  bc2d7ce34516_add_document_mime_parse_fields.py  d1515cab3f4f_add_chapter_drafts_table.py  f845e98018a5_initial_tables.py
apps/api/app/: main.py
apps/api/app/core/: config.py  exceptions.py  logging.py
apps/api/app/db/: session.py
apps/api/app/llm/: __init__.py  base.py  call_logger.py  mock_provider.py  registry.py
apps/api/app/schemas/: analysis.py  bible.py  chapter.py  (+14 more)
apps/api/tests/: conftest.py  test_analysis.py  test_api.py  test_batch.py  test_bible.py  test_bible_candidates.py  test_chapter_plans.py  test_chapters.py  test_creative.py  test_documents.py  test_draft_versions.py  test_drafts.py  test_projects.py  test_providers.py  test_rhythms.py  test_state_changes.py  test_story_gene.py  test_synopses.py  test_volumes.py
(+78 files in other folders)
